# pico-jit

./: .gitignore  Cargo.toml  LICENSE  readme.md
bench/: .gdbinit  Cargo.toml  Embed.toml
bench/.cargo/: config.toml
bench/benchmarks/: Makefile  mandelbrot.c  murmur3.c  nbody.c  prime.c  quicksort.ts  wasm.h
bench/benchmarks/headers/: mandelbrot.wasm.h  murmur3.wasm.h  nbody.wasm.h  prime.wasm.h  quicksort.wasm.h
bench/benchmarks/wasm/: mandelbrot.wasm  murmur3.wasm  nbody.wasm  prime.wasm  quicksort.wasm
bench/benchmarks/wat/: mandelbrot.wat  murmur3.wat  nbody.wat  prime.wat  quicksort.wat
bench/src/: main.rs  runner.rs
libs/: README.md
libs/ux2/ux2/: Cargo.toml
libs/ux2/ux2/src/: lib.rs
libs/wasmparser-nostd/: .cargo_vcs_info.json  Cargo.toml
libs/wasmparser-nostd/src/: resources.rs  validator.rs
libs/wasmparser-nostd/src/validator/: core.rs  func.rs  types.rs
pico-emit/: Cargo.toml
pico-emit/src/: buffer.rs  emitter.rs  lib.rs  registers.rs
pico-emit/src/instructions/: add.rs  asr.rs  cmp.rs  ldr.rs  lsl.rs  lsr.rs  misc.rs  mod.rs  mov.rs  pop.rs  push.rs  str.rs  sub.rs
pico-emit/tests/: integration.rs
pico-emit/tests/helpers/: extensions.rs  mod.rs  random_data.rs  runner.rs
pico-jit/: Cargo.toml
pico-jit/src/: aliases.rs  compiler.rs  lib.rs  memory.rs  wasm_module.rs
pico-jit/src/generation/: bulk_memory.rs  control_flow.rs  conversion.rs  f32_ops.rs  globals.rs  i32_ops.rs  locals.rs  memory.rs  mod.rs
